New Depsgraph: Auto-IK doesn't work. #46320

Closed
opened 2015-09-29 16:53:47 +02:00 by Mario Mey · 12 comments

Blender 2.76-rc2 2eb0c99

Ubuntu 14.04 64x, nVidia GT620

Auto-IK doesn't work on new DEPSGRAPH

Open the file with new depsgraph and try to move the bone selected. You won't can.

With old depsgraph, it works.

79_depsgraph-auto-ik.blend

Blender 2.76-rc2 2eb0c99 Ubuntu 14.04 64x, nVidia GT620 Auto-IK doesn't work on new DEPSGRAPH Open the file with new depsgraph and try to move the bone selected. You won't can. With old depsgraph, it works. [79_depsgraph-auto-ik.blend](https://archive.blender.org/developer/F240896/79_depsgraph-auto-ik.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @Sergey

Added subscriber: @Sergey

Can confirm the issue. Will look into it shortly.

Can confirm the issue. Will look into it shortly.
Sergey Sharybin self-assigned this 2015-09-30 09:38:04 +02:00

Added subscribers: @JoshuaLeung, @ideasman42

Added subscribers: @JoshuaLeung, @ideasman42

Developer's note:

The issue is caused by transform tool temporary affecting on the pose constraints, which actually changes the way how pose is to be evaluated. Here's a patch which makes sure dependency graph is always up-to-date after such modifications:

{{P283}}

Not sure if there's better approach to this problem. @JoshuaLeung, @ideasman42, any ideas?

Developer's note: The issue is caused by transform tool temporary affecting on the pose constraints, which actually changes the way how pose is to be evaluated. Here's a patch which makes sure dependency graph is always up-to-date after such modifications: {{[P283](https://archive.blender.org/developer/P283.txt)}} Not sure if there's better approach to this problem. @JoshuaLeung, @ideasman42, any ideas?

@Sergey, seems correct API usage and fine for master.


Note - calling into DAG directly seems a bit low level (we could have a version of BKE_pose_tag_recalc for this).

@Sergey, seems correct API usage and fine for master. ---- Note - calling into DAG directly seems a bit low level (we could have a version of `BKE_pose_tag_recalc` for this).

@ideasman42, we can't only tag pose for recalc, nodes in depsgraph are to be updated to mimic updated armature settings. In theory it's possible to perform partial depsgraph topology update, but in practice it's quite tricky to do correct.

@ideasman42, we can't only tag pose for recalc, nodes in depsgraph are to be updated to mimic updated armature settings. In theory it's possible to perform partial depsgraph topology update, but in practice it's quite tricky to do correct.

Sorry for the spam.

On another hand on a production scene full relations update could be rather too much costly to be performed on transform. Maybe there's some better trick to do.

Sorry for the spam. On another hand on a production scene full relations update could be rather too much costly to be performed on transform. Maybe there's some better trick to do.

This issue was referenced by 03e8202b7b

This issue was referenced by 03e8202b7b1963bc856ca31b205364ddc569535a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46320
No description provided.